# renion

./: .env.example  .gitignore  1.env  Procfile  README.md  SNAPSHOT.md  pyproject.toml  renion  renion.pub  requirements.txt  start.sh  stop.sh
docs/: CHECKLIST.md  DEVELOPER_GUIDE.md  MONETIZATION-STRATEGY.md  SNAPSHOT-ADR-003.md  SNAPSHOT-FINAL.md  STATUS.md  USER_GUIDE.md
docs/adr/: ADR-001-baseline-architecture.md  ADR-002-real-data-sources.md  ADR-003-full-opportunity-hunter-with-llm.md  ADR-004-deduplication-of-articles.md  ADR-005-llm-optimization.md  ADR-006-json-parsing-improvement.md  ADR-007-landing-page-generation.md  ADR-008-web-interface.md  ADR-009-advertising-launch.md  ADR-011-economic-layer.md  ADR-012-jobs-source.md  ADR-013-stripe-provider.md  ADR-014-stripe-webhook.md  ADR-015-social-posting.md  ADR-016-hypothesis-quality.md  ADR-018-web-scan-trigger.md  ADR-021-scheduled-scan.md  ADR-022-email-collection.md
src/: config.py
src/application/: advertising.py  analyzer.py  clustering.py  handlers.py  landing_generator.py  market_estimator.py  mvp_generator.py  opportunity_hunter.py  problem_analyzer.py  scan_runner.py  social_post_manager.py
src/application/use_cases/: payment_processor.py
src/domain/: event.py  invoice.py  object.py  payment.py  scan_job.py  social_post.py  transaction.py
src/domain/interfaces/: llm_provider.py  payment_provider.py  social_poster.py
src/infrastructure/: event_bus.py  scheduler.py  storage.py
src/infrastructure/llm/: __init__.py  groq_provider.py  ollama_client.py  ollama_provider.py
src/infrastructure/payment/: simulated_provider.py  stripe_provider.py
src/infrastructure/social/: hackernews_poster.py  mastodon_poster.py  medium_poster.py  reddit_poster.py  twitter_poster.py
src/interfaces/: cli.py  web.py  web.py.bak
src/templates/: hypotheses.html  landing_page.html  landing_template.html
tests/: test_storage.py
