[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aion"
version = "0.1.0"
dependencies = [
    "aiosqlite>=0.19.0",
    "feedparser>=6.0.0",
    "aiohttp>=3.9.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "stripe>=7.0.0",
    "python-dotenv>=1.0.0",
    "tweepy>=4.14.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
